# Schoolwork

./: .blogg.css.swp  .gitignore  README.md  blogg.css  blogg.html  lab3.s  test.s
.metadata/: version.ini
DV1466 Linux/TextProcessing/: .report.txt.swp  dircopy.txt  histcopy.txt  netcopy.txt  pscopy.txt  report.txt
DV1466 Linux/find/: report.txt
DV1466 Linux/webspider/: script1.bash  script2.bash  script3.bash  worklist.txt
LocationTimer/app/: build.gradle
c++/Timber/: Register.cpp  Register.h  RuleTimber.cpp  RuleTimber.h  Timber.cpp  Timber.h  WainScoting.cpp  WainScoting.h  main.cpp
c++/musicplayer/: mainwindow.h  musicplayer.pro  musicplayer.pro.user.fa0afc2  player.cpp  player.h
c++/objectCourse/: carRegister.bz2
c++/uppgift2/: EnglishWords.h  HashTableChaining.h  HashTableLinearProbing.h  HashingCourses.cpp
datastrukturer/: Element.h  HashTable.h
dv1454/: .3week.sql.swp  3week.sql  lab3  tsql.sh  webb.html
farm/: Animal.java  Cow.java  Dog.java  FileManagement.java  Gui.java  Hen.java  Main.java  Pig.java  Sheep.java
hash/: EnglishWords.h  Hash.h  HashTableDouble.h  HashingEnglishWords.cpp
objectCourse/friendbook/: CMakeLists.txt  Friend.h  Friendbook.cpp  Friendbook.h  Makefile  tags  utilities.cpp
python/: socketserver.py  sockettest.py
upg2/: client.py
x86_64/: .Mprov64.s.swp  .lab3.s.svz  .lab3.s.swa  .lab3.s.swb  .lab3.s.swc  .lab3.s.swd  .lab3.s.swe  .lab3.s.swf  .lab3.s.swg  .lab3.s.swh  .lab3.s.swi  .lab3.s.swj  .lab3.s.swk  .lab3.s.swl  .lab3.s.swm  .lab3.s.swn  .lab3.s.swo  .lab3.s.swp  Mprov64.s  int  lab3.s  test
(+470 files in other folders)
